--- a/style.css
+++ b/style.css
@@ -1,107 +1,111 @@
-body{
-   max-width:  1300px;
- min-width:790px;
- height: 1000px;
-     padding: 100px;
-    margin: auto; 
+body {
+  max-width: 1300px;
+  min-width: 850px;
+  height: auto;
+  padding: 100px;
+  margin: auto;
+  ;
 }
-
-.header_cv{
-  
-  
-  display: flex; 
-  justify-content:space-evenly;
+.mYi {
+  margin: 75px;
+  border-radius: 200px;
+  width: 200px;
+  height: 200px;
+  box-shadow: 12px 12px 20px 4px rgb(2, 12, 39);
+}
+.header_cv {
+  display: flex;
+  justify-content: start;
   flex-direction: row;
   background-color: rgb(145, 148, 145);
   align-items: center;
-  
+ 
 }
 .header_image {
   display: flex;
   justify-content: flex-start;
-  flex-basis: 150px;
+
   background-color: rgb(145, 148, 145);
 }
-.header_name{
+.header_name {
+  display: flex;
+
+  /* background-color: cornsilk;*/
+}
+.Headelast_name {
+  margin: 10px;
+}
+
+.main_contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: darkgrey;
+}
+.main_contactS {
   display: flex;
   flex-direction: column;
-  justify-content:center;
-  flex-basis: 300px;
-  background-color: cornsilk;
-  
-}
-.Headelast_name{
-  font-weight: 500;
- 
- }
-
-
-.main_contact{
-  display: flex; 
-  flex-direction: row;
-  justify-content:space-around;
+  justify-content: center;
   background-color: darkgrey;
-  
 }
-.main_contactS {display: flex; 
-  flex-direction: column;
-  justify-content:center;
-  background-color: darkgrey;
-
-
-}
-.mymain_about{
+.mymain_about {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content:space-around;
-  height: 700px;
-background-color: rgb(248, 247, 247);
-
+  justify-content: space-around;
+  height: auto;
+  background-color: rgb(248, 247, 247);
 }
 
 .mymain_aboutdiv {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around
-  }
+  justify-content: space-around;
+}
 .fott {
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
   align-items: center;
- justify-content: space-around;
+  justify-content: space-around;
 }
-h3{ border-bottom: 5px solid #d2dad9;
+h3 {
+  width: 211px;
+  border-bottom: 5px solid #d2dad9;
   padding-bottom: 5px;
   text-align: center;
-  
+  text-shadow: 6px 7px 7px #0c0c0c;
 }
- 
 
 h4 {
   border-bottom: 2px solid #181717;
   padding-bottom: 1px;
+
+  margin-left: 100;
 }
 h1 {
-  width: 255px;
   margin: 0 auto 8px;
   font-family: "Georgia", serif;
   text-align: center;
   font-weight: normal;
   font-size: 40px;
- /* line-height: 64px;*/
+  text-shadow: 13px 15px 10px rgb(79, 89, 119), 16px 17px 7px #0c0c0c;
 }
-p{
-  width: 200px;
-  margin: 0 auto 8px;
-  text-align: center;
-  }
-  .fott{
-    background-color: darkgrey;
 
-  }
-  .myImage{
-    margin: 40px;
-    padding: 10px;
-  }
+.pshad {
+  text-transform: lowercase;
+  font-size: 27px;
+  text-shadow: 13px 15px 10px rgb(46, 76, 167), 16px 17px 7px #0c0c0c;
+  text-align: center;
+}
+.fott {
+  background-color: darkgrey;
+}
+.myImage {
+  margin: 40px;
+  padding: 10px;
+}
+.pcontact {
+  text-align: center;
+  text-shadow: 6px 7px 7px #0c0c0c;
+}
