--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
   height: auto;
   padding: 100px;
   margin: auto;
-  ;
 }
 .mYi {
   margin: 75px;
@@ -18,10 +17,9 @@ body {
   display: flex;
   justify-content: start;
   flex-direction: row;
- /* background-color: rgb(145, 148, 145);*/
- background: linear-gradient(45deg, #EECFBA, #C5DDE8);
+  /* background-color: rgb(145, 148, 145);*/
+  background: linear-gradient(45deg, #eecfba, #c5dde8);
   align-items: center;
- 
 }
 .header_image {
   display: flex;
@@ -35,7 +33,112 @@ body {
   /* background-color: cornsilk;*/
 }
 .Headelast_name {
-  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  text-align: center;
+
+  overflow: hidden;
+}
+
+h1 {
+  font-size: 11em;
+  font: bold 7.5vw/1.6 "Signika", sans-serif;
+  user-select: none;
+}
+
+h1 span {
+  display: inline-block;
+  /* animation: float 0.4s ease-in-out infinite;*/
+}
+@keyframes float {
+  0%,
+  100% {
+    transform: none;
+  }
+  33% {
+    transform: translateY(-1px) rotate(-2deg);
+  }
+  66% {
+    transform: translateY(1px) rotate(2deg);
+  }
+}
+div:hover span {
+  animation: bounce 0.6s;
+}
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translate(0);
+  }
+  25% {
+    transform: rotateX(20deg) translateY(2px) rotate(-3deg);
+  }
+  50% {
+    transform: translateY(-20px) rotate(3deg) scale(1.1);
+  }
+}
+
+span:nth-child(4n) {
+  color: hsl(50, 75%, 55%);
+  text-shadow: 1px 1px hsl(50, 75%, 45%), 2px 2px hsl(50, 45%, 45%),
+    3px 3px hsl(50, 45%, 45%), 4px 4px hsl(50, 75%, 45%);
+}
+span:nth-child(4n-1) {
+  color: hsl(135, 35%, 55%);
+  text-shadow: 1px 1px hsl(135, 35%, 45%), 2px 2px hsl(135, 35%, 45%),
+    3px 3px hsl(135, 35%, 45%), 4px 4px hsl(135, 35%, 45%);
+}
+span:nth-child(4n-2) {
+  color: hsl(155, 35%, 60%);
+  text-shadow: 1px 1px hsl(155, 25%, 50%), 2px 2px hsl(155, 25%, 50%),
+    3px 3px hsl(155, 25%, 50%), 4px 4px hsl(140, 25%, 50%);
+}
+span:nth-child(4n-3) {
+  color: hsl(30, 65%, 60%);
+  text-shadow: 1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%),
+    3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%);
+}
+
+h1 span:nth-child(2) {
+  animation-delay: 0.05s;
+}
+h1 span:nth-child(3) {
+  animation-delay: 0.1s;
+}
+h1 span:nth-child(4) {
+  animation-delay: 0.15s;
+}
+h1 span:nth-child(5) {
+  animation-delay: 0.2s;
+}
+h1 span:nth-child(6) {
+  animation-delay: 0.25s;
+}
+h1 span:nth-child(7) {
+  animation-delay: 0.3s;
+}
+h1 span:nth-child(8) {
+  animation-delay: 0.35s;
+}
+h1 span:nth-child(9) {
+  animation-delay: 0.4s;
+}
+h1 span:nth-child(10) {
+  animation-delay: 0.45s;
+}
+h1 span:nth-child(11) {
+  animation-delay: 0.5s;
+}
+h1 span:nth-child(12) {
+  animation-delay: 0.55s;
+}
+h1 span:nth-child(13) {
+  animation-delay: 0.6s;
+}
+h1 span:nth-child(14) {
+  animation-delay: 0.65s;
 }
 
 .main_contact {
@@ -43,13 +146,12 @@ body {
   flex-direction: row;
   justify-content: space-around;
   background: linear-gradient(45deg, #f1c6a9, #b4d7e7);
-  
 }
 .main_contactS {
   display: flex;
   flex-direction: column;
   justify-content: center;
- /* background-color: darkgrey;*/
+  /* background-color: darkgrey;*/
 }
 .mymain_about {
   display: flex;
@@ -76,7 +178,7 @@ body {
 }
 h3 {
   width: 211px;
-  border-bottom: 5px solid #a6d3ce;
+  border-bottom: 5px solid #8b92b3;
   padding-bottom: 5px;
   text-align: center;
   text-shadow: 6px 7px 7px #0c0c0c;
@@ -85,14 +187,12 @@ h3 {
 h4 {
   border-bottom: 2px solid #181717;
   padding-bottom: 1px;
-  
-  
 }
 h1 {
   margin: 0 auto 8px;
   font-family: "Georgia", serif;
   text-align: center;
-  font-weight: normal;
+  /* font-weight: normal;*/
   font-size: 40px;
   text-shadow: 13px 15px 10px rgb(79, 89, 119), 16px 17px 7px #0c0c0c;
 }
@@ -104,7 +204,7 @@ h1 {
   text-align: center;
 }
 .fott {
-  background: linear-gradient(45deg, #f1b58d, #8dcfee);
+  background: linear-gradient(45deg, #8dcfee, #f1b58d);
 }
 .myImage {
   margin: 40px;
